Fix overlapping

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,9 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -20,29 +26,29 @@ h1 {
   display: grid;
   gap: 20px;
   padding: 20px;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 }
 
 .stat-card {
+  min-height: 200px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
   padding: 1.5rem;
-  overflow: auto;
+  overflow: hidden;
   color: #678ee4;
   font-size: medium;
   font-family: 'Courier New', Courier, monospace;
   font-weight: 100;
-  height: fit-content;
-  width: fit-content;
   border: 1px solid rgba(255,255,255,0.1);
   box-shadow: 2px 2px 2px #279eb3;
   border-radius: 10px;
 }
 
 .stat-value {
-  font-size: 3rem;
+  font-size: clamp(1.5rem, 8vw, 3rem);
   width: 100%;
   box-sizing: border-box;
   font-family: 'Courier New', Courier, monospace;
